# nimbus

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml
src/: error.rs  errors.rs  lib.rs  main.rs
src/app/: mod.rs  state.rs
src/cache/: mod.rs  schema.sql  store.rs
src/config/: aws_profile.rs  mod.rs
src/core/: action.rs  cost.rs  mod.rs  provider.rs  resource.rs
src/providers/: mod.rs
src/providers/aws/: auth.rs  client.rs  cost.rs  mod.rs
src/providers/aws/resources/: ec2.rs  elb.rs  mod.rs  rds.rs  route53.rs  s3.rs
src/ui/: dashboard.rs  detail.rs  mod.rs  render.rs  resource_list.rs  tabs.rs  theme.rs
src/ui/components/: mod.rs  status_bar.rs
tests/integration/: config_tests.rs  core_tests.rs  mod.rs
